crates/agglayer-config/tests/snapshots/settlement_service__deserialize_custom_certificate_config.snap
---
source: crates/agglayer-config/tests/settlement_service.rs
expression: config
---
max-retries = 2048
tx-retry-policy = "linear"
tx-retry-interval = "15s"
confirmations = 64
finality = "finalized"
gas-multiplier-factor = 1.1
gas-limit = "0x5f5e100"
gas-price-multiplier-factor = 1.2
gas-price-floor = "5gwei"
gas-price-ceiling = "200gwei"
