crates/agglayer-config/tests/snapshots/settlement_service__deserialize_custom_validium_config.snap
---
source: crates/agglayer-config/tests/settlement_service.rs
expression: config
---
max-retries = 512
tx-retry-policy = "linear"
tx-retry-interval = "5s"
confirmations = 16
finality = "immediate"
gas-multiplier-factor = 1.05
gas-limit = "0x1c9c380"
gas-price-multiplier-factor = 1.1
gas-price-floor = "1gwei"
gas-price-ceiling = "50gwei"
