crates/agglayer-config/tests/snapshots/settlement_service__settlement_transaction_config_defaults.snap
---
source: crates/agglayer-config/tests/settlement_service.rs
expression: config
---
max-expected-retries = 16384
settlement-policy = "safe-block"
gas-limit-ceiling = "0x3938700"
gas-price-ceiling = "100gwei"

[retry-on-transient-failure]
initial-interval = "10s"
interval-multiplier-factor = 1.5
max-interval = "2m"
jitter = "1s"

[retry-on-not-included-on-l1]
initial-interval = "1m"
interval-multiplier-factor = 2.0
max-interval = "10m"
jitter = "10s"
